--- a/Codigos/style.css
+++ b/Codigos/style.css
@@ -1,4 +1,25 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 html, body {
     margin: 0px;
     padding: 0px;
+}
+body {
+  font-family: 'Inter', sans-serif;
+}
+
+h1 {
+    display: flex;
+    justify-content: center;
+}
+.contagem {
+    display: flex;
+    justify-content: center;
+}
+.contagem p {
+    margin: 10px;
+}
+.cokie {
+    display: flex;
+    padding-top: 20px;
+    justify-content: center;
 }
