Sistema de compras e upgrades feitos, falta os pop-up e mecher na mensagem de erro por falta de dinheiro

--- a/Codigos/style.css
+++ b/Codigos/style.css
@@ -169,7 +169,9 @@ h1 {
     padding: 5px;
     
 }
-
+.loja .itens-2 .item-magico {
+    width: 426px;
+}
 .loja .itens .item-fabrica {
     padding-right: 0px;
 }
